data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1843.wast
;; 4. **Test 4: Uninitialized Operand on Conditional Branch**    - **Description**: Attempt to use `br_if` without the operand that determines the condition for branching on the stack.    - **Constraint Checked**: Check that both implementations properly validate the presence of the conditional operand.    - **Relation to Type Mismatch**: Missing conditional operand affects the stack and may lead to unexpected type mismatches downstream.

(assert_invalid
  (module (func $uninitialized-operand-on-br_if
    (block (br_if 0))
  ))
  "type mismatch"
)